Almost perfect, just the thing thar noise should be applied after the background gradients - noise is the last layer on the canvas

--- a/public/simple-noise-demo.html
+++ b/public/simple-noise-demo.html
@@ -76,13 +76,13 @@
         frequencySlider.addEventListener('input', (e) => {
             noiseFrequency = parseFloat(e.target.value);
             frequencyValue.textContent = noiseFrequency.toFixed(2);
-            applyNoise();
+            regenerate(); // Always regenerate from clean background
         });
 
         intensitySlider.addEventListener('input', (e) => {
             noiseIntensity = parseFloat(e.target.value);
             intensityValue.textContent = noiseIntensity.toFixed(2);
-            applyNoise();
+            regenerate(); // Always regenerate from clean background
         });
 
         function createGradientBackground() {
